put metrics on index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     {{ content }}
     <footer>
         <p>
-            <small>© {{ 'now' | date: "%Y" }} Mingyang Li. All rights reserved.</small>
+            <small>© {{ 'now' | date: "%Y" }} Mingyang Li. All rights reserved. Metrics are last updated on {{site.data.metrics.updated|date: "%F at %H:%M" }}.</small>
         </p>
     </footer>
 </body>
