--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://andybrewer.github.io/mvp/mvp.css">
     <link rel="icon" type="image/png" href="{{ site.icon }}">
+    <style type="text/css">
+        footer {
+            padding: 8em 2em 2em 2em;
+            background: url("layered-waves-haikei.svg");
+            background-size: cover;
+            background-position: bottom;
+        }
+        footer p {
+            color: white;
+        }
+    </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga_id }}"></script>
     <script>
@@ -26,7 +37,7 @@
     {{ content }}
     <footer>
         <p>
-            <small>© {{ 'now' | date: "%Y" }} Mingyang Li. All rights reserved. Metrics are last updated on {{site.data.metrics.updated|date: "%F at %H:%M" }}.</small>
+            © {{ 'now' | date: "%Y" }} Mingyang Li. All rights reserved. Metrics are last updated on {{site.data.metrics.updated|date: "%F at %H:%M" }}.
         </p>
     </footer>
 </body>
