active nav li should be black

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
         footer p {
             color: white;
         }
+        nav li.active a {
+            color: black;
+        }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga_id }}"></script>
