--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,9 +8,15 @@ layout: default
         {% assign mainmenu = site.data.menus.main | sort: 'weight'  %}
         <ul>
         {% for item in mainmenu %}
-            <li class="{% if item.url == page.url %}active{% endif %}">
-                <a href="{{ item.url | relative_url }}">{{ item.name }}</a>
-            </li>
+            {% if item.url == page.url %}
+                <li class="active">
+                    {{ item.name }}
+                </li>
+            {% else %}
+                <li>
+                    <a href="{{ item.url | relative_url }}">{{ item.name }}</a>
+                </li>
+            {% endif %}
         {% endfor %}
         </ul>
     </nav>
